bni/dll_smile/windows/bismile/bismile.h


EXPORT(int, intArray_NumItems)(void* intArray);

EXPORT(int*, intArray_Items)(void* intArray);



EXPORT(void*, new_network)();

EXPORT(void, delete_network)(void* net);

EXPORT(void, UpdateBeliefs)(void* net);

EXPORT(void, ReadFromFile)(void* net, const char* fileName);

EXPORT(void, SetDefaultBNAlgorithm)(void* net, int theAlgorithm);

EXPORT(int, GetDefaultBNAlgorithm)(void* net);

EXPORT(int, SetNumberOfSamples)(void* net, int aNumber);

EXPORT(void, SetNumberOfDiscretizationSamples)(void* net, int aNumber);



EXPORT(void*, net_Header)(void* net);


EXPORT(const char*, header_GetId)(void* header);

EXPORT(void, header_SetId)(void* header, const char* id);

EXPORT(const char*, userProperties_GetPropertyValue)(void* userProperties, int index);

EXPORT(void, userProperties_Clear)(void* userProperties);


/** Submodels **/
EXPORT(int, submodel_CreateSubmodel)(void* net, int theParent, const char *thisId);

EXPORT(int, submodel_DeleteSubmodel)(void* net, int handler);

EXPORT(int, submodel_FindSubmodel)(void* net, const char *withThisID);

EXPORT(int, submodel_GetParent)(void* net, int ofThisSubmodel);

EXPORT(int, submodel_MoveSubmodel)(void* net, int thisSubmodel, int intoThisSubmodel);

EXPORT(void*, submodel_GetSubmodel)(void* net, int handler);

EXPORT(void*, submodel_Header)(void* submodel);

EXPORT(void*, submodel_ScreenInfo)(void* submodel);

EXPORT(int, node_GetSubmodel)(void* node);

//EXPORT(int, node_SetSubmodel)(void* node, int thisSubmodel);
EXPORT(int, node_SetSubmodel)(void* node, char *thisSubmodel);

EXPORT(void*, submodel_GetIncludedSubmodels)(void* net, int inThisSubmodel);

EXPORT(void*, submodel_GetIncludedNodes)(void* net, int inThisSubmodel);

/// I thought "deep" meant recursive, but it doesn't seem to do that, and I'm not actually sure what it does
EXPORT(void*, submodel_GetDeepIncludedSubmodels)(void* net, int inThisSubmodel);

EXPORT(void*, submodel_GetDeepIncludedNodes)(void* net, int inThisSubmodel);


/** Learning **/
EXPORT(int, learn_em)(void* net, const char* fileName, float ess, bool relevance, float learningRate, int initialLearningPoint);

EXPORT(int, learn_emSimple)(void* net, const char* fileName, float ess);

EXPORT(int*, learn_pc)(void* net, const char* fileName, int maxAdjacency, int maxSearchTime, double significance, int tiersSize, int* tiers);

EXPORT(int, learn_bs)(void* net, const char* fileName, int numIterations, int maxParents);

EXPORT(int, learn_tan)(void* net, const char* fileName, const char* classvar, int maxSearchTime);


/** QGeNIe/DeMorgan **/
EXPORT(int, Demorgan_SetParentWeights)(void* obj, int size, const double* dArr);

EXPORT(int, Demorgan_SetParentWeight)(void* obj, int numParent, double value);

EXPORT(double, Demorgan_GetParentWeight)(void* obj, int numParent);

EXPORT(void*, Demorgan_GetParentWeights)(void* obj);


EXPORT(int, Demorgan_SetParentTypes)(void* obj, int size, const int* iArr);

EXPORT(int, Demorgan_SetParentType)(void* obj, int numParent, int value);

EXPORT(int, Demorgan_GetParentType)(void* obj, int numParent);

EXPORT(void*, Demorgan_GetParentTypes)(void* obj);


EXPORT(int, Demorgan_GetTemporalParentType)(void* obj, int order, int numParent);

EXPORT(int, Demorgan_SetTemporalParentType)(void* obj, int order, int numParent, int parentType);

EXPORT(double, Demorgan_GetTemporalParentWeight)(void* obj, int order, int numParent);

EXPORT(int, Demorgan_SetTemporalParentWeight)(void* obj, int order, int numParent, double weight);


EXPORT(double, Demorgan_GetPriorBelief)(void* obj);

EXPORT(int, Demorgan_SetPriorBelief)(void* obj, double value);