llm-bn/bni/dll_smile/bni_smile.py

g.userProperties_GetPropertyValue.restype = c_simplechar_p
g.userProperties_GetPropertyValue.argtypes = [ctypes.POINTER(VOID), ctypes.c_int]
#g.userProperties_Clear.restype = VOID
g.userProperties_Clear.argtypes = [ctypes.POINTER(VOID)]
g.submodel_CreateSubmodel.restype = ctypes.c_int
g.submodel_CreateSubmodel.argtypes = [ctypes.POINTER(VOID), ctypes.c_int, c_simplechar_p]
g.submodel_DeleteSubmodel.restype = ctypes.c_int
g.submodel_DeleteSubmodel.argtypes = [ctypes.POINTER(VOID), ctypes.c_int]
g.submodel_FindSubmodel.restype = ctypes.c_int
g.submodel_FindSubmodel.argtypes = [ctypes.POINTER(VOID), c_simplechar_p]
g.submodel_GetParent.restype = ctypes.c_int
g.submodel_GetParent.argtypes = [ctypes.POINTER(VOID), ctypes.c_int]
g.submodel_MoveSubmodel.restype = ctypes.c_int
g.submodel_MoveSubmodel.argtypes = [ctypes.POINTER(VOID), ctypes.c_int, ctypes.c_int]
g.submodel_GetSubmodel.restype = ctypes.POINTER(VOID)
g.submodel_GetSubmodel.argtypes = [ctypes.POINTER(VOID), ctypes.c_int]
g.submodel_Header.restype = ctypes.POINTER(VOID)
g.submodel_Header.argtypes = [ctypes.POINTER(VOID)]
g.submodel_ScreenInfo.restype = ctypes.POINTER(VOID)
g.submodel_ScreenInfo.argtypes = [ctypes.POINTER(VOID)]
g.node_GetSubmodel.restype = ctypes.c_int
g.node_GetSubmodel.argtypes = [ctypes.POINTER(VOID)]
g.node_SetSubmodel.restype = ctypes.c_int
g.node_SetSubmodel.argtypes = [ctypes.POINTER(VOID), c_simplechar_p]
g.submodel_GetIncludedSubmodels.restype = ctypes.POINTER(VOID)
g.submodel_GetIncludedSubmodels.argtypes = [ctypes.POINTER(VOID), ctypes.c_int]
g.submodel_GetIncludedNodes.restype = ctypes.POINTER(VOID)
g.submodel_GetIncludedNodes.argtypes = [ctypes.POINTER(VOID), ctypes.c_int]
g.submodel_GetDeepIncludedSubmodels.restype = ctypes.POINTER(VOID)
g.submodel_GetDeepIncludedSubmodels.argtypes = [ctypes.POINTER(VOID), ctypes.c_int]
g.submodel_GetDeepIncludedNodes.restype = ctypes.POINTER(VOID)
g.submodel_GetDeepIncludedNodes.argtypes = [ctypes.POINTER(VOID), ctypes.c_int]
g.learn_em.restype = ctypes.c_int
g.learn_em.argtypes = [ctypes.POINTER(VOID), c_simplechar_p, ctypes.c_float, ctypes.c_bool, ctypes.c_float, ctypes.c_int]
g.learn_emSimple.restype = ctypes.c_int
g.learn_emSimple.argtypes = [ctypes.POINTER(VOID), c_simplechar_p, ctypes.c_float]
g.learn_pc.restype = ctypes.POINTER(ctypes.c_int)
g.learn_pc.argtypes = [ctypes.POINTER(VOID), c_simplechar_p, ctypes.c_int, ctypes.c_int, ctypes.c_double, ctypes.c_int, ctypes.POINTER(ctypes.c_int)]
g.learn_bs.restype = ctypes.c_int
g.learn_bs.argtypes = [ctypes.POINTER(VOID), c_simplechar_p, ctypes.c_int, ctypes.c_int]
g.learn_tan.restype = ctypes.c_int
g.learn_tan.argtypes = [ctypes.POINTER(VOID), c_simplechar_p, c_simplechar_p, ctypes.c_int]
g.Demorgan_SetParentWeights.restype = ctypes.c_int
g.Demorgan_SetParentWeights.argtypes = [ctypes.POINTER(VOID), ctypes.c_int, ctypes.POINTER(ctypes.c_double)]
g.Demorgan_SetParentWeight.restype = ctypes.c_int
g.Demorgan_SetParentWeight.argtypes = [ctypes.POINTER(VOID), ctypes.c_int, ctypes.c_double]
g.Demorgan_GetParentWeight.restype = ctypes.c_double
g.Demorgan_GetParentWeight.argtypes = [ctypes.POINTER(VOID), ctypes.c_int]
g.Demorgan_GetParentWeights.restype = ctypes.POINTER(VOID)
g.Demorgan_GetParentWeights.argtypes = [ctypes.POINTER(VOID)]
g.Demorgan_SetParentTypes.restype = ctypes.c_int
g.Demorgan_SetParentTypes.argtypes = [ctypes.POINTER(VOID), ctypes.c_int, ctypes.POINTER(ctypes.c_int)]
g.Demorgan_SetParentType.restype = ctypes.c_int
g.Demorgan_SetParentType.argtypes = [ctypes.POINTER(VOID), ctypes.c_int, ctypes.c_int]
g.Demorgan_GetParentType.restype = ctypes.c_int
g.Demorgan_GetParentType.argtypes = [ctypes.POINTER(VOID), ctypes.c_int]
g.Demorgan_GetParentTypes.restype = ctypes.POINTER(VOID)
g.Demorgan_GetParentTypes.argtypes = [ctypes.POINTER(VOID)]
g.Demorgan_GetTemporalParentType.restype = ctypes.c_int
g.Demorgan_GetTemporalParentType.argtypes = [ctypes.POINTER(VOID), ctypes.c_int, ctypes.c_int]
g.Demorgan_SetTemporalParentType.restype = ctypes.c_int
g.Demorgan_SetTemporalParentType.argtypes = [ctypes.POINTER(VOID), ctypes.c_int, ctypes.c_int, ctypes.c_int]
g.Demorgan_GetTemporalParentWeight.restype = ctypes.c_double
g.Demorgan_GetTemporalParentWeight.argtypes = [ctypes.POINTER(VOID), ctypes.c_int, ctypes.c_int]
g.Demorgan_SetTemporalParentWeight.restype = ctypes.c_int
g.Demorgan_SetTemporalParentWeight.argtypes = [ctypes.POINTER(VOID), ctypes.c_int, ctypes.c_int, ctypes.c_double]
g.Demorgan_GetPriorBelief.restype = ctypes.c_double
g.Demorgan_GetPriorBelief.argtypes = [ctypes.POINTER(VOID)]
g.Demorgan_SetPriorBelief.restype = ctypes.c_int
g.Demorgan_SetPriorBelief.argtypes = [ctypes.POINTER(VOID), ctypes.c_double]
# [[BINDINGS END]] - DON'T MODIFY


# Constants
class Node:
	# These roles defined in nodedef.h (with names like DSL_DECISION)
	FEATURES = {
		'Decision': 1,
		'Chance': 2,
		'Deterministic': 4,
		'Utility': 8,
		'Discrete': 16,
		'CASTLogic': 32,
		'DeMorganLogic': 64,
		'NoisyMaxLogic': 128,
		'NoisyAdderLogic': 256,
		'ParentsContinuous': 512,
	}
	# MAU nodes are specific to GeNIe. They overlap with equation and utility nodes in Netica,
	# but not exactly for either. (In fact, GeNIe defines it as a utility node with continuous parents,
	# which would normally be utilities.)
	# Also defined in nodedef.h
	NATURE_NODE, CONSTANT_NODE, DECISION_NODE, UTILITY_NODE, DISCONNECTED_NODE, \
	EQUATION_NODE, MAU_NODE, TRUTH_TABLE, DEMORGAN = list(range(1,10))

	# QGeNIe arc types:
	INHIBITOR, REQUIREMENT, CAUSE, BARRIER = list(range(0, 4))
class Node(Node):
	NODE_TYPE_MAP = {
		Node.NATURE_NODE: 18, #DSL_CPT (=DSL_CHANCE|DSL_DISCRETE)
		Node.EQUATION_NODE: 4, # DSL_EQUATION (=DSL_DETERMINISTIC)
		Node.UTILITY_NODE: 8, # DSL_UTILITY
		Node.DECISION_NODE: 17, # DSL_LIST (=DSL_DECISION|DSL_DISCRETE)
		Node.MAU_NODE: 520, # DSL_MAU (=DSL_UTILITY|DSL_PARENTSCONTIN)
		Node.TRUTH_TABLE: 20, # DSL_TRUTHTABLE (=DSL_DETERMINISTIC|DSL_DISCRETE)
		Node.DEMORGAN: 82, # DSL_DEMORGAN (=DSL_CHANCE|DSL_DISCRETE|DSL_DEMORGANLOGIC)
	}
	NODE_TYPE_MAP_REV = {v:k for k,v in NODE_TYPE_MAP.items()}
class Net:
	ALG_BN_LAURITZEN, ALG_BN_HENRION, ALG_BN_PEARL, ALG_BN_LSAMPLING, \
		ALG_BN_SELFIMPORTANCE, ALG_BN_HEURISTICIMPORTANCE, ALG_BN_BACKSAMPLING, \
		ALG_BN_AISSAMPLING, ALG_BN_EPISSAMPLING, ALG_BN_LBP, ALG_BN_LAURITZEN_OLD, \
		ALG_BN_RELEVANCEDECOMP, ALG_BN_RELEVANCEDECOMP2, ALG_HBN_HEPIS, ALG_HBN_HLW, \
		ALG_HBN_HLBP, ALG_HBN_HLOGICSAMPLING = list(range(0,17))
 
def NYI():
	print("nyi")
	
class BNIError(Exception):
	def __init__(self, msg):
		self.msg = msg
	def __str__(self):
		return self.msg

class Net(Net):
	def __init__(self, fn = ""): # fn is a filename
		self.eNet = None # A pointer to the network as represented by the engine
		self._autoUpdate = True
		self.xdsl = None # The .xdsl XML
		
		self.needsUpdate = True
		self.forceUpdates = False
		
		# Caches
		self._nodeCache = {}
	
		self.eNet = g.new_network()
		if fn:
			# Just being unicode causes problems... Not sure how to
			# deal with a filename if it was genuinely unicode
			#fn2 = bytes(fn, 'ascii')
			fn2 = fn
			g.ReadFromFile(self.eNet, fn2)
			if fn.endswith(".xdsl"):
				self.xdsl = ET.parse(fn)
				self.xdsl.__class__.replaceNode = replaceNode
			elif fn.endswith(".dne"):
				# Fix up probs that GeNIe has with reading new Netica (>= V4) files
				contents = open(fn).read()
				# Strip out strings and comments (makes scanning for keywords simpler)
				# Strip out strings
				contents = re.sub(r'"(\\\\|\\"|[^"])*?"', '', contents)
				# Strip out comments
				contents = re.sub(r'//.*', '', contents)
				# Scan for nodes and their CPTs
				reg = re.compile(r'\b(node)\s+(\w+)\s*\{|\b(probs)\s*=([^;]*)')
				startPos = 0
				currentNode = None
				while 1:
					m = reg.search(contents, startPos)
					if m:
						if m.group(1)=="node":
							currentNode = m.group(2)
						elif m.group(3)=="probs":
							cptStr = m.group(4)
							# Flatten to 1D by splitting on commas/parentheses/spaces (any non-numeral symbol)
							cptStr = cptStr.strip("(), \t\r\n")
							cptStrs = re.split(r'[(),\s]+', cptStr)
							# Convert to floats
							cpt = [float(f) for f in cptStrs]
							# Update the in-memory CPT
							# Usually get err here?
							self.node(currentNode).cpt1d(cpt)
						startPos = m.end()
					else:
						break
	
	def __del__(self):
		g.delete_network(self.eNet)
	
	# |uniqueSet| is a list of strings or objects with .name() properties.
	# A name will be generated based on |name| that doesn't clash with anything
	# in |uniqueSet|.
	def makeValidName(self, name, uniqueSet = [], maxLength = 30):
		IDREGEX = r'([_a-zA-Z])([_0-9a-zA-Z]{0,29})' # NOTE: Not anchored at start,end
		def makeName(s):
			try:
				s = re.sub(r'^[^_a-zA-Z]', r'_\g<0>', re.sub(r'[^_0-9a-zA-Z]', '_', str(s)))[:maxLength]
				# GeNIe crash on _ at start? Yes, why?
				s = re.sub(r'^_+', '', s)
				# Make sure it starts with letter
				s = re.sub(r'^([^a-zA-Z])', r's\1', s)[:maxLength]
				# Make sure empty states also have a letter
				if not s:  s = 's'
				return s
			except:
				pdb.set_trace()
				return None
		
		hasNode = True
		newName = makeName(name)
		i = 1
		uniqueSet = [(n.name() if hasattr(n,'name') else n) for n in uniqueSet]
		while hasNode:
			if newName not in uniqueSet:
				hasNode = False
			else:
				newName = newName[:maxLength-len(str(i))] + str(i)
			i += 1
			if i > 1000:
				pdb.set_trace()
				return None
		
		return newName

	def submodels(self, submodelOnly = False, submodelId = 0):
		# if recursive:
			# submodelInts = g.submodel_GetDeepIncludedSubmodels(self.eNet, submodelId)
		# else:
			# submodelInts = g.submodel_GetIncludedSubmodels(self.eNet, submodelId)
		submodelInts = g.submodel_GetIncludedSubmodels(self.eNet, submodelId)
		n = g.intArray_NumItems(submodelInts)
		items = g.intArray_Items(submodelInts)
		
		submodels = []
		for i in range(n):
			submodelInt = items[i]
			submodels.append(Submodel(self, eId = submodelInt))
		
		if not submodelOnly:
			for submodel in submodels:
				submodels.extend( submodel.submodels(submodelOnly=submodelOnly) )
			
		return submodels
	
	def addSubmodel(self, submodelName):
		return Submodel(self, submodelName)
	
	def getSubmodel(self, submodelName = None, submodelId = None):
		submodelInt = submodelId
		if submodelId is None:
			submodelInt = g.submodel_FindSubmodel(self.eNet, submodelName)
		return Submodel(self, eId = submodelInt)
	
	# This is engine dependent
	def updateAlgorithm(self, algorithm = None):
		if algorithm is None:
			return g.GetDefaultBNAlgorithm(self.eNet)
		else:
			g.SetDefaultBNAlgorithm(self.eNet, algorithm)
			self.needsUpdate = True
		
		return self
	
	# autoUpdate can be turned off for performance. You then need
	# to manually use 'update' after changes and before reading beliefs.
	def autoUpdate(self, autoUpdate = None):
		if autoUpdate is None:
			return self._autoUpdate
		else:
			self._autoUpdate = autoUpdate
		
		return self

	def update(self, forceUpdates = False):
		if self.needsUpdate or forceUpdates or self.forceUpdates:
			#print("Updating")
			g.UpdateBeliefs(self.eNet)
			self.needsUpdate = False
		
		return self
		
	def _setSamples(self, samples, discreteSamples):
		g.SetNumberOfSamples(self.eNet, samples)
		g.SetNumberOfDiscretizationSamples(self.eNet, discreteSamples)
		self.needsUpdate = True
		
	def name(self, _name = None, check = False):
		header = g.net_Header(self.eNet)
		if _name is None:
			return g.header_GetId(header)
		else:
			if check:
				_name = self.net.makeValidName(_name)
			g.header_SetId(header, _name)
			
		return self
